[project]
name = "environment-state-server"
version = "0.1.0"
description = "Local environment state aggregator for Dify and home control workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/environment_state_server"]

